mejora potencial del numero de conexiones implicadas en una sola peticion de pagina